# favorite_service

./: Dockerfile  pyproject.toml
.github/workflows/: docker-build-push.yml
alembic/versions/: 363a10ef3905_add_new_fields_to_favorites.py  53a11a7a843b_init.py  77a64465eed2_init.py
app/: config.py  main.py
app/core/: logger.py  utils.py
app/database/crud/: base.py  favorite.py
app/database/db/: session.py
app/database/models/: __init__.py  favorite.py
app/database/schemas/: favorite.py
app/routers/v1/: private.py  public.py
app/routers/v1/favorites/: admin.py  crud.py
app/rpc_client/: auction_api.py
app/schemas/: favorite.py  pagination.py
test/: conftest.py  factory_favorites.py  factory_user_info.py  test_favorite.py
